<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/vip_menu_title">

        <Preference
            app:icon="@drawable/ic_workspace_premium"
            app:key="key_vip_management"
            app:summary="@string/vip_settings_summary"
            app:title="@string/vip_settings_title" />

        <Preference
            app:key="key_vip_diagnostic_history"
            app:summary="@string/vip_diagnostic_pref_summary"
            app:title="@string/vip_diagnostic_pref_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/version">

        <Preference
            app:defaultValue="default"
            app:key="key_version_app"
            app:title="" />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="pref_key_storage_settings"
        app:title="@string/general">

        <Preference
            app:defaultValue="0"
            app:key="temperature_unit"
            app:title="@string/temperature_unit" />

        <Preference
            app:key="key_hardware_snapshot"
            app:summary="@string/hardware_snapshot_pref_summary"
            app:title="@string/hardware_snapshot_pref_title" />

        <Preference
            app:key="key_usb_bt"
            app:summary="@string/usb_bt_pref_summary"
            app:title="@string/usb_bt_pref_title" />

        <Preference
            app:key="key_fleet_compare"
            app:summary="@string/fleet_compare_pref_summary"
            app:title="@string/fleet_compare_pref_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="key_health_alert"
            app:summary="@string/health_alert_pref_summary"
            app:title="@string/health_alert_pref_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_key_language_category"
        app:title="@string/language">

        <Preference
            app:key="key_change_language"
            app:title="@string/language_change" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="pref_key_theme_category"
        app:title="@string/pref_theme">

        <Preference
            app:defaultValue="default"
            app:key="key_theme"
            app:title="@string/pref_theme_choose" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/rate_app">

        <Preference
            app:defaultValue="default"
            app:key="key_rate_app"
            app:title="@string/pref_rate_app_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/more_app">

        <Preference
            app:defaultValue="default"
            app:key="key_more_app"
            app:title="@string/pref_more_app_summary" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/share_app">

        <Preference
            app:defaultValue="default"
            app:key="key_share_app"
            app:title="@string/pref_share_app_summary" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/term_policy">

        <Preference
            app:defaultValue="default"
            app:key="key_policy_app"
            app:title="@string/pref_policy_app_summary" />

    </PreferenceCategory>

</PreferenceScreen>
