<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuActionShieldScore"
        android:icon="@drawable/ic_shield"
        android:orderInCategory="40"
        android:title="@string/shield_score_menu_title"
        app:actionLayout="@layout/action_shield_score"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuActionVip"
        android:icon="@drawable/ic_crown_premium_v2"
        android:orderInCategory="50"
        android:title="@string/vip_menu_title"
        app:actionLayout="@layout/action_vip_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuActionShare"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/share_app"
        app:showAsAction="ifRoom" />

</menu>
